--- a/site/404.html
+++ b/site/404.html
@@ -204,7 +204,7 @@
   
     
   
-  MkDocs
+  Unykad Documentation
 
       </a>
     </li>
@@ -295,7 +295,7 @@
         
   
   <span class="md-ellipsis">
-    MkDocs
+    Unykad Documentation
   </span>
   
 
