--- a/site/404.html
+++ b/site/404.html
@@ -204,7 +204,7 @@
   
     
   
-  Unykad Documentation
+  Unykad Documentation Page
 
       </a>
     </li>
@@ -295,7 +295,7 @@
         
   
   <span class="md-ellipsis">
-    Unykad Documentation
+    Unykad Documentation Page
   </span>
   
 
