--- a/site/How to git/einfürung_in_git/index.html
+++ b/site/How to git/einfürung_in_git/index.html
@@ -213,7 +213,7 @@
   
     
   
-  Unykad Documentation
+  Unykad Documentation Page
 
       </a>
     </li>
@@ -306,7 +306,7 @@
         
   
   <span class="md-ellipsis">
-    Unykad Documentation
+    Unykad Documentation Page
   </span>
   
 
