--- a/site/Networking/vlsm/index.html
+++ b/site/Networking/vlsm/index.html
@@ -211,7 +211,7 @@
   
     
   
-  Unykad Documentation
+  Unykad Documentation Page
 
       </a>
     </li>
@@ -304,7 +304,7 @@
         
   
   <span class="md-ellipsis">
-    Unykad Documentation
+    Unykad Documentation Page
   </span>
   
 
